--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,8 +14,9 @@
             <p><strong>Email:</strong> <%= user.emails[0].value %></p>
         </div>
 
-        <div class="logout-btn">
-            <a href="/logout" class="btn">Logout</a>
+        <div class="button-container">            
+            <a href="/logout" class="button">Logout</a>            
+            <a href="/" class="button">Home</a>            
         </div>
     </div>
 </body>
